--- a/themusescircle/.gitignore
+++ b/themusescircle/.gitignore
@@ -18,6 +18,8 @@ wp-content/*
 wp-content/plugins/*
 !wp-content/plugins/owl-post/
 !wp-content/plugins/inspire-reviews/
+wp-content/plugins/inspire-reviews/assets/images
+dev/plugins/inspire-reviews/assets/images
 
 # Themes
 wp-content/themes/*
