Fix gitignore to include images in dev folder

--- a/khyeras/.gitignore
+++ b/khyeras/.gitignore
@@ -30,3 +30,6 @@ vendor/
 styles/*
 !styles/khyeras_v1
 !styles/khyeras_v1/*
+!styles/khyeras_v1/theme
+!styles/khyeras_v1/theme/images/*
+!_dev/styles/khyeras_v1/theme/images
