Fix image path in gitignore

--- a/khyeras/.gitignore
+++ b/khyeras/.gitignore
@@ -31,5 +31,5 @@ styles/*
 !styles/khyeras_v1
 !styles/khyeras_v1/*
 !styles/khyeras_v1/theme
-!styles/khyeras_v1/theme/images/*
+!styles/khyeras_v1/theme/images
 !_dev/styles/khyeras_v1/theme/images
