--- a/glowbug-forum/.gitignore
+++ b/glowbug-forum/.gitignore
@@ -21,10 +21,15 @@ install/
 language/
 phpbb/
 store/
-styles/*
+!styles/
 vendor/
 
 # Extensions
 
 # Themes
+styles/*
 !styles/glowbug_v1
+!styles/glowbug_v1/*
+!styles/glowbug_v1/theme
+!styles/glowbug_v1/theme/images
+!_dev/styles/glowbug_v1/theme/images
