Initial extension commit

--- a/khyeras/.gitignore
+++ b/khyeras/.gitignore
@@ -13,7 +13,7 @@ cache/
 config/
 docs/
 download/
-ext/
+!ext/
 files/
 images/
 includes/
@@ -25,6 +25,16 @@ store/
 vendor/
 
 # Extensions
+ext/*
+!ext/displaycoffee/
+
+ext/displaycoffee/*
+!ext/displaycoffee/khyeras/
+
+ext/displaycoffee/khyeras/config/*
+ext/displaycoffee/khyeras/event/*
+!ext/displaycoffee/khyeras/config/
+!ext/displaycoffee/khyeras/event/
 
 # Themes
 styles/*
