Clean up gitignore file to remove unnecessary *s

--- a/khyeras/.gitignore
+++ b/khyeras/.gitignore
@@ -23,11 +23,11 @@ store/
 vendor/
 
 # Extensions
-ext/*
+ext/
 !ext/displaycoffee/
 
 # Config folders
-config/*
+config/
 !ext/displaycoffee/config/
 
 # Themes
