--- a/khyeras/ext/displaycoffee/khyeras/config/services.yml
+++ b/khyeras/ext/displaycoffee/khyeras/config/services.yml
@@ -5,5 +5,6 @@ services:
             - '@controller.helper'
             - '@template'
             - '@user'
+            - '@dbal.conn'
         tags:
             - { name: event.listener }
