--- a/khyeras/_dev/ext/displaycoffee/khyeras/config/services.yml
+++ b/khyeras/_dev/ext/displaycoffee/khyeras/config/services.yml
@@ -2,9 +2,9 @@ services:
     displaycoffee.khyeras.listener:
         class: displaycoffee\khyeras\event\main_listener
         arguments:
-            - '@controller.helper'
             - '@template'
             - '@user'
             - '@dbal.conn'
+            - '%core.php_ext%'
         tags:
             - { name: event.listener }
