--- a/khyeras/_dev/ext/displaycoffee/khyeras/config/services.yml
+++ b/khyeras/_dev/ext/displaycoffee/khyeras/config/services.yml
@@ -7,6 +7,7 @@ services:
             - '@dbal.conn'
             - '@profilefields.manager'
             - '@profilefields.lang_helper'
+            - '@phpbb.pages.operator'
             - '%core.php_ext%'
         tags:
             - { name: event.listener }
